--- a/notebooks/hazardExposure/hazardExposure.qmd
+++ b/notebooks/hazardExposure/hazardExposure.qmd
@@ -364,6 +364,17 @@ padding:6px 10px;
   gap:8px;
 }
 
+.hz-pill--error{
+  background:rgba(220,38,38,.10);
+  border-color:rgba(220,38,38,.25);
+  color:rgba(185,28,28,1);
+}
+.hz-pill--loading{
+  background:rgba(59,130,246,.10);
+  border-color:rgba(59,130,246,.25);
+  color:rgba(30,64,175,1);
+}
+
 .hz-tabs{
 display:flex;
   gap:8px;
@@ -405,6 +416,155 @@ background:rgba(2,132,199,.12);
   box-shadow:0 1px 0 rgba(2,132,199,.18);
 }
 
+
+
+/* View toggle (segmented control) — visually distinct from the Q1/Q2/Q3/Q4 tabs */
+.hz-viewToggle{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  margin-left:auto;
+}
+.hz-viewToggle__label{
+  font-weight:900;
+  font-size:.78rem;
+  color:rgba(15,23,42,.72);
+  letter-spacing:.02em;
+  text-transform:uppercase;
+}
+.hz-viewToggle__group{
+  display:inline-flex;
+  align-items:stretch;
+  border:1px solid rgba(15,23,42,.16);
+  background:rgba(255,255,255,.72);
+  border-radius:999px;
+  overflow:hidden;
+  box-shadow:0 8px 18px rgba(0,0,0,.04);
+}
+.hz-viewBtn{
+  appearance:none;
+  border:0;
+  background:transparent;
+  padding:7px 10px;
+  display:inline-flex;
+  align-items:center;
+  gap:7px;
+  cursor:pointer;
+  font-weight:850;
+  font-size:.82rem;
+  color:#0f172a;
+  line-height:1;
+  transition:background .15s ease, transform .06s ease, box-shadow .15s ease;
+}
+.hz-viewBtn + .hz-viewBtn{
+  border-left:1px solid rgba(15,23,42,.12);
+}
+.hz-viewBtn__ic{
+  font-size:.95rem;
+  opacity:.9;
+}
+.hz-viewBtn.is-active{
+  background:rgba(2,132,199,.14);
+  box-shadow:inset 0 0 0 1px rgba(2,132,199,.22);
+}
+.hz-viewBtn:active{
+  transform:translateY(1px);
+}
+.hz-viewBtn:focus{
+  outline:none;
+  box-shadow:0 0 0 3px rgba(2,132,199,.18);
+}
+@media (max-width: 992px){
+  .hz-viewToggle{
+    width:100%;
+    margin-left:0;
+    justify-content:space-between;
+  }
+  .hz-viewToggle__group{
+    flex:1;
+    justify-content:space-between;
+  }
+  .hz-viewBtn{
+    flex:1;
+    justify-content:center;
+  }
+  .hz-viewBtn__tx{
+    display:none; /* icons-only on small screens */
+  }
+}
+
+
+/* Navigation bar: makes “Breakdown” tabs and “View” toggle feel distinct and intuitive */
+.hz-navBar{
+  display:flex;
+  gap:14px;
+  align-items:flex-end;
+  flex-wrap:wrap;
+  margin-top:10px;
+}
+.hz-navBar__group{
+  display:flex;
+  flex-direction:column;
+  gap:6px;
+  min-width:0;
+}
+.hz-navBar__group--right{
+  margin-left:auto;
+  align-items:flex-end;
+}
+.hz-navBar__label{
+  font-weight:950;
+  font-size:.76rem;
+  color:rgba(15,23,42,.70);
+  letter-spacing:.03em;
+  text-transform:uppercase;
+}
+
+/* Make the question tabs look like a “tab strip” instead of another segmented control */
+.hz-tabs{
+  margin-top:0;
+  gap:6px;
+  padding:6px;
+  border-radius:14px;
+  border:1px solid rgba(15,23,42,.10);
+  background:rgba(15,23,42,.04);
+}
+.hz-tab{
+  border:0;
+  background:transparent;
+  padding:8px 10px;
+  border-radius:12px;
+  font-weight:900;
+  font-size:.82rem;
+}
+.hz-tab.is-active{
+  background:rgba(255,255,255,.92);
+  box-shadow:0 1px 0 rgba(15,23,42,.12);
+  outline:1px solid rgba(2,132,199,.28);
+}
+.hz-tab:hover{
+  background:rgba(255,255,255,.75);
+}
+
+/* Make view toggle slightly more compact so it reads like a toolbar */
+.hz-viewToggle{
+  margin-left:0;
+}
+.hz-viewToggle__group{
+  border-radius:14px;
+}
+.hz-viewBtn{
+  font-size:.80rem;
+  padding:7px 9px;
+}
+
+/* On small screens, stack nicely */
+@media (max-width: 680px){
+  .hz-navBar__group--right{ width:100%; align-items:flex-start; }
+  .hz-viewToggle{ width:100%; justify-content:space-between; }
+  .hz-viewToggle__group{ width:100%; justify-content:space-between; }
+  .hz-viewBtn{ flex:1; justify-content:center; }
+}
 .hz-tab:focus{
 outline:none; box-shadow:0 0 0 3px rgba(2,132,199,.20);
 }
@@ -579,6 +739,61 @@ border:1px solid rgba(0,0,0,.12);
 .hz-btn:hover{
 background:rgba(0,0,0,.04);
 }
+
+
+.hz-btn--sm{
+  padding:6px 10px;
+  font-size:12px;
+}
+
+.hz-select{
+  border:1px solid rgba(0,0,0,.12);
+  background:rgba(255,255,255,.85);
+  border-radius:999px;
+  padding:6px 10px;
+  font-weight:800;
+  font-size:12px;
+}
+
+.hz-select:focus{
+  outline:none;
+  box-shadow:0 0 0 3px rgba(59,130,246,.18);
+}
+
+.hz-recordsBar{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  gap:12px;
+  margin:10px 0 10px 0;
+  flex-wrap:wrap;
+}
+
+.hz-recordsBar__left{
+  display:flex;
+  gap:8px;
+  align-items:center;
+  flex-wrap:wrap;
+}
+
+.hz-recordsBar__right{
+  display:flex;
+  gap:8px;
+  align-items:center;
+}
+
+.hz-pager{
+  display:flex;
+  gap:8px;
+  align-items:center;
+}
+
+.hz-pager__label{
+  font-weight:900;
+  font-size:12px;
+  color:rgba(0,0,0,.72);
+}
+
 
 .hz-split{
 display:grid; grid-template-columns: 1fr 1fr; gap:12px;
@@ -1057,6 +1272,79 @@ margin: 0;
 font-size: 13px;
 }
 
+
+
+/* --- Dashboard tabs row (Question tabs + View mode) --- */
+.hz-card__tabs--row{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:10px;
+  flex-wrap:wrap;
+}
+.hz-tabsWrap{display:flex; align-items:center;}
+.hz-tabsWrap--right{justify-content:flex-end;}
+
+/* --- Wider split for Chart + Table --- */
+.hz-split--wide{
+  grid-template-columns: 1.35fr 1fr;
+}
+
+/* --- Table host --- */
+.hz-tableWrap{
+  position:relative;
+  min-height: 560px;
+  padding: 6px;
+}
+.hz-tableWrap--busy::before{
+  content:"";
+  position:absolute; inset:0;
+  background:rgba(255,255,255,.62);
+  backdrop-filter: blur(2px);
+  border-radius:14px;
+  z-index: 10;
+}
+.hz-tableWrap--busy::after{
+  content:"Updating table…";
+  position:absolute;
+  top:14px; right:14px;
+  background:rgba(15,23,42,.85);
+  color:#fff;
+  font-size:12px;
+  font-weight:800;
+  padding:6px 10px;
+  border-radius:999px;
+  z-index: 11;
+}
+
+/* Grid.js tweaks (subtle) */
+.hz-tableWrap .gridjs-container{
+  box-shadow:none;
+}
+.hz-tableWrap .gridjs-head{
+  background:rgba(248,250,252,.8);
+}
+
+.hz-stack{
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+}
+
+.hz-tableWrap{
+  font-size:12px;
+}
+.hz-tableWrap .gridjs-table th,
+.hz-tableWrap .gridjs-table td{
+  font-size:12px;
+  line-height:1.25;
+  padding:6px 8px;
+}
+.hz-tableWrap .gridjs-search input,
+.hz-tableWrap .gridjs-pagination,
+.hz-tableWrap .gridjs-summary{
+  font-size:12px;
+}
 </style>
 ```
 
@@ -2977,10 +3265,10 @@ hz_q1Chart = {
 // Dashboard question selector (tabs)
 viewof hz_question = {
   const options = [
-    { value: "q1", label: "By hazard" },
-    { value: "q2", label: "By crop" },
-    { value: "q3", label: "Hazard × crop" },
-    { value: "q4", label: "By admin" }
+    { value: "q1", label: "Hazards" },
+    { value: "q2", label: "Commodities" },
+    { value: "q3", label: "Hazard × commodity" },
+    { value: "q4", label: "Geography" }
   ];
 
   const root = document.createElement("div");
@@ -3015,6 +3303,173 @@ viewof hz_question = {
 
   return root;
 }
+
+
+viewof hz_viewMode = {
+  const options = [
+    { value: "chart",   label: "Chart",        icon: "📈" },
+    { value: "table",   label: "Summary Table",        icon: "▦" },
+    { value: "both",    label: "Chart+ Summary",  icon: "▤" },
+    { value: "records", label: "Raw Records",      icon: "🗃️" }
+  ];
+
+  const root = document.createElement("div");
+  root.className = "hz-viewToggle";
+  root.setAttribute("role", "radiogroup");
+
+  const lbl = document.createElement("div");
+  lbl.className = "hz-viewToggle__label";
+  lbl.textContent = "View";
+  root.appendChild(lbl);
+
+  const group = document.createElement("div");
+  group.className = "hz-viewToggle__group";
+  root.appendChild(group);
+
+  const buttons = new Map();
+
+  const set = (v, emit = true) => {
+    root.value = v;
+    paint(v);
+    if (emit) root.dispatchEvent(new Event("input", { bubbles: true }));
+  };
+
+  const paint = (v) => {
+    for (const [val, btn] of buttons.entries()) {
+      const on = (val === v);
+      btn.classList.toggle("is-active", on);
+      btn.setAttribute("aria-checked", on ? "true" : "false");
+      btn.setAttribute("tabindex", on ? "0" : "-1");
+    }
+  };
+
+  for (const op of options) {
+    const b = document.createElement("button");
+    b.type = "button";
+    b.className = "hz-viewBtn";
+    b.setAttribute("role", "radio");
+    b.setAttribute("aria-checked", "false");
+    b.innerHTML = `<span class="hz-viewBtn__ic">${op.icon}</span><span class="hz-viewBtn__tx">${op.label}</span>`;
+    b.onclick = () => set(op.value);
+    b.onkeydown = (e) => {
+      if (e.key !== "ArrowLeft" && e.key !== "ArrowRight") return;
+      e.preventDefault();
+      const vals = options.map(o => o.value);
+      const i = Math.max(0, vals.indexOf(root.value));
+      const j = (e.key === "ArrowRight") ? Math.min(vals.length - 1, i + 1) : Math.max(0, i - 1);
+      set(vals[j]);
+      buttons.get(vals[j])?.focus?.();
+    };
+    buttons.set(op.value, b);
+    group.appendChild(b);
+  }
+
+  // Default: Chart (as requested)
+  root.value = "chart";
+  paint("chart");
+
+  return root;
+}
+
+viewof hz_recordsSide = {
+  const options = [
+    { value: "left",  label: "Left" },
+    { value: "right", label: "Right" }
+  ];
+
+  const root = document.createElement("div");
+  root.className = "hz-tabs hz-tabs--small";
+
+  const buttons = new Map();
+  const paint = (v) => {
+    for (const [val, btn] of buttons.entries()) btn.classList.toggle("is-active", val === v);
+  };
+
+  const set = (v, { silent = false } = {}) => {
+    if (root.value === v) return;
+    root.value = v;
+    paint(v);
+    if (!silent) root.dispatchEvent(new Event("input", { bubbles: true }));
+  };
+
+  for (const op of options) {
+    const btn = document.createElement("button");
+    btn.type = "button";
+    btn.className = "hz-tab";
+    btn.textContent = op.label;
+    btn.onclick = () => set(op.value);
+    buttons.set(op.value, btn);
+    root.appendChild(btn);
+  }
+
+  set("left", { silent: true });
+  return root;
+}
+
+viewof hz_recordsSort = {
+  const options = ["value_desc", "value_asc"]
+  const labelMap = { value_desc: "Value ↓", value_asc: "Value ↑" }
+  const sel = Inputs.select(options, {
+    value: "value_desc",
+    label: null,
+    format: (d) => labelMap[d] ?? String(d)
+  });
+  sel.classList.add("hz-select");
+  return sel;
+}
+
+viewof hz_recordsPageSize = {
+  const options = [50, 100, 200, 500]
+  const sel = Inputs.select(options, {
+    value: 100,
+    label: null,
+    format: (d) => `${d} rows`
+  });
+  sel.classList.add("hz-select");
+  return sel;
+}
+
+viewof hz_recordsPage = {
+  const root = document.createElement("div");
+  root.className = "hz-pager";
+  root.value = 1;
+
+  const prev = document.createElement("button");
+  prev.type = "button";
+  prev.className = "hz-btn hz-btn--sm";
+  prev.textContent = "Prev";
+
+  const label = document.createElement("div");
+  label.className = "hz-pager__label";
+
+  const next = document.createElement("button");
+  next.type = "button";
+  next.className = "hz-btn hz-btn--sm";
+  next.textContent = "Next";
+
+  const paint = () => { label.textContent = `Page ${root.value}`; };
+
+  const set = (v, { silent = false } = {}) => {
+    const n = Math.max(1, Number(v || 1));
+    if (root.value === n) return;
+    root.value = n;
+    paint();
+    if (!silent) root.dispatchEvent(new Event("input", { bubbles: true }));
+  };
+
+  prev.onclick = () => set(root.value - 1);
+  next.onclick = () => set(root.value + 1);
+
+  root.appendChild(prev);
+  root.appendChild(label);
+  root.appendChild(next);
+
+  paint();
+
+  globalThis.__ATLAS_HZ_REC_PAGER__ = { prev, next, label, set };
+  return root;
+}
+
 
 hz_activeQuestion = (hz_question ?? "q1")
 
@@ -3327,6 +3782,10 @@ hz_dashMount = html`<div class=\"hz-mount\"><div class=\"hz-loading\">Loading da
 
 hz_statusPill = html`<span class=\"hz-pill\">Loading…</span>`
 hz_chartHost  = html`<div class="hz-chartWrap"><div class="hz-loading">Loading chart…</div></div>`
+hz_tableActionsHost = html`<div class="hz-actions"></div>`
+hz_tableHost  = html`<div class="hz-tableWrap"><div class="hz-loading">Loading table…</div></div>`
+hz_recordsActionsHost = html`<div class="hz-actions"></div>`
+hz_recordsHost  = html`<div class="hz-tableWrap"><div class="hz-loading">Loading records…</div></div>`
 hz_debugHost  = html``
 hz_pathHost   = html``
 hz_schemaHost = html``
@@ -3337,11 +3796,13 @@ hz_registerUi = {
   const ui = (globalThis.__ATLAS_HZ_UI__ ??= {})
   ui.statusPill = hz_statusPill
   ui.chartWrap = hz_chartHost
+  ui.tableWrap = hz_tableHost
+  ui.recordsWrap = hz_recordsHost
 
   ui._busyCount = ui._busyCount ?? 0
   ui.setBusy = (on, msg = "Updating…") => {
     try {
-      if (!ui.statusPill || !ui.chartWrap) return
+      if (!ui.statusPill) return
 
       if (on) {
         ui._busyCount += 1
@@ -3349,13 +3810,17 @@ hz_registerUi = {
         ui.statusPill.replaceChildren(
           html`<span class="hz-pill__spin" aria-hidden="true"></span><span>${msg || "Updating…"}</span>`
         )
-        ui.chartWrap.classList.add("hz-chartWrap--busy")
+        try { ui.chartWrap?.classList?.add?.("hz-chartWrap--busy") } catch (_) {}
+        try { ui.tableWrap?.classList?.add?.("hz-tableWrap--busy") } catch (_) {}
+        try { ui.recordsWrap?.classList?.add?.("hz-tableWrap--busy") } catch (_) {}
         return
       }
 
       ui._busyCount = Math.max(0, ui._busyCount - 1)
       if (ui._busyCount === 0) {
-        ui.chartWrap.classList.remove("hz-chartWrap--busy")
+        try { ui.chartWrap?.classList?.remove?.("hz-chartWrap--busy") } catch (_) {}
+        try { ui.tableWrap?.classList?.remove?.("hz-tableWrap--busy") } catch (_) {}
+        try { ui.recordsWrap?.classList?.remove?.("hz-tableWrap--busy") } catch (_) {}
       }
     } catch (e) {}
   }
@@ -3371,17 +3836,67 @@ hz_dashboardShell = html`
       <div class=\"hz-card__head\">
         <div>
           <div class=\"hz-card__title\">${hz_dashTitle}</div>
-          <div class=\"hz-card__sub\">${hz_dashSub}</div>\n          <div class=\"hz-card__tabs\">${viewof hz_question}</div>
+          <div class=\"hz-card__sub\">${hz_dashSub}</div>
+          <div class="hz-navBar">
+            <div class="hz-navBar__group">
+              <div class="hz-navBar__label">Breakdown</div>
+              <div class="hz-navBar__control">${viewof hz_question}</div>
+            </div>
+            <div class="hz-navBar__group hz-navBar__group--right">
+              <div class="hz-navBar__control">${viewof hz_viewMode}</div>
+            </div>
+          </div>
         </div>
         ${hz_statusPill}
       </div>
-      ${hz_chartHost}
-      
+
+      ${
+        (hz_viewMode === "records")
+          ? html`<div class="hz-sideCard">
+              <div style="display:flex;justify-content:space-between;align-items:center;gap:10px;margin-bottom:8px">
+                <div class="hz-sideCard__title" style="margin:0">Records</div>
+                ${hz_recordsActionsHost}
+              </div>
+              <div class="hz-recordsBar">
+                <div class="hz-recordsBar__left">
+                  ${viewof hz_recordsSide}
+                  ${viewof hz_recordsSort}
+                  ${viewof hz_recordsPageSize}
+                </div>
+                <div class="hz-recordsBar__right">
+                  ${viewof hz_recordsPage}
+                </div>
+              </div>
+              ${hz_recordsHost}
+            </div>`
+          : (hz_viewMode === "chart")
+            ? html`<div class="hz-sideCard">${hz_chartHost}</div>`
+            : (hz_viewMode === "table")
+              ? html`<div class="hz-sideCard">
+                  <div style="display:flex;justify-content:space-between;align-items:center;gap:10px;margin-bottom:8px">
+                    <div class="hz-sideCard__title" style="margin:0">Table</div>
+                    ${hz_tableActionsHost}
+                  </div>
+                  ${hz_tableHost}
+                </div>`
+              : html`<div class="hz-stack">
+                  <div class="hz-sideCard">
+                    <div class="hz-sideCard__title">Chart</div>
+                    ${hz_chartHost}
+                  </div>
+                  <div class="hz-sideCard">
+                    <div style="display:flex;justify-content:space-between;align-items:center;gap:10px">
+                      <div class="hz-sideCard__title" style="margin:0">Table</div>
+                      ${hz_tableActionsHost}
+                    </div>
+                    ${hz_tableHost}
+                  </div>
+                </div>`
+      }
     </div>
-</div>
+  </div>
 `
 
-// Mount panels into placeholders (never blocks hz_main)
 hz_mountControls = {
   try {
     hz_controlsMount.replaceChildren(hz_controlsPanelReal)
@@ -3402,10 +3917,106 @@ hz_mountDash = {
 }
 
 
+
+// ------------------------------------------------------------
+// Table rendering (Grid.js) + CSV export
+// ------------------------------------------------------------
+hz_loadCssOnce = (id, href) => {
+  if (document.getElementById(id)) return Promise.resolve(true)
+  return new Promise((resolve, reject) => {
+    const el = document.createElement("link")
+    el.id = id
+    el.rel = "stylesheet"
+    el.href = href
+    el.onload = () => resolve(true)
+    el.onerror = (e) => reject(e)
+    document.head.appendChild(el)
+  })
+}
+
+hz_loadScriptOnce = (id, src) => {
+  if (document.getElementById(id)) return Promise.resolve(true)
+  return new Promise((resolve, reject) => {
+    const el = document.createElement("script")
+    el.id = id
+    el.src = src
+    el.async = true
+    el.onload = () => resolve(true)
+    el.onerror = (e) => reject(e)
+    document.head.appendChild(el)
+  })
+}
+
+hz_loadGridjs = async () => {
+  await hz_loadCssOnce("hz-gridjs-theme", "https://unpkg.com/gridjs/dist/theme/mermaid.min.css")
+  await hz_loadScriptOnce("hz-gridjs-lib", "https://cdnjs.cloudflare.com/ajax/libs/gridjs/6.2.0/gridjs.production.min.js")
+  return window.gridjs
+}
+
+hz_csvEscape = (v) => {
+  const s = String(v ?? "")
+  if (/[",\n]/.test(s)) return `"${s.replaceAll('"', '""')}"`
+  return s
+}
+
+hz_downloadCsv = (filename, rows) => {
+  const lines = rows.map(r => r.map(hz_csvEscape).join(",")).join("\n")
+  const blob = new Blob([lines], { type: "text/csv;charset=utf-8" })
+  const a = document.createElement("a")
+  a.href = URL.createObjectURL(blob)
+  a.download = filename || "table.csv"
+  document.body.appendChild(a)
+  a.click()
+  setTimeout(() => { URL.revokeObjectURL(a.href); a.remove() }, 250)
+}
+
+hz_mountGrid = (host, key, cfg) => {
+  const g = window.gridjs
+  if (!g?.Grid) throw new Error("Grid.js not loaded")
+  const store = (globalThis.__ATLAS_HZ_GRIDS__ ??= {})
+  try { store[key]?.destroy?.() } catch (_) {}
+  host.replaceChildren()
+  const grid = new g.Grid(cfg)
+  store[key] = grid
+  grid.render(host)
+  return grid
+}
+
+
 // Build chart *safely* (catch DuckDB/Arrow/Plot errors so UI still renders)
 hz_updateChart = {
   const q = (hz_activeQuestion || "q1")
+  const view = (hz_viewMode || "both")
+  const wantsChart = (view === "chart" || view === "both")
+  const wantsTable = (view === "table" || view === "both")
+  const wantsRecords = (view === "records")
   const errors = []
+
+  // Records-only view: status pill reflects /records endpoint; rendering handled by hz_updateRecords.
+  if (wantsRecords) {
+    const r = hz_recordsResp
+    if (!r) {
+      hz_statusPill.textContent = "Loading"
+      hz_statusPill.classList.add("hz-pill--loading")
+      hz_statusPill.classList.remove("hz-pill--error")
+    hz_statusPill.classList.remove("hz-pill--loading")
+      return html``
+    }
+    if (!r.ok) {
+      hz_statusPill.textContent = "Error"
+      hz_statusPill.classList.add("hz-pill--error")
+    hz_statusPill.classList.remove("hz-pill--loading")
+      hz_statusPill.classList.remove("hz-pill--loading")
+      return html``
+    }
+    hz_statusPill.classList.remove("hz-pill--error")
+    hz_statusPill.classList.remove("hz-pill--loading")
+    const tag = r.cached ? "Cached" : "Ready"
+    const ms = Number.isFinite(r.t_ms) ? ` (${r.t_ms} ms)` : ""
+    hz_statusPill.textContent = tag + ms
+    return html``
+  }
+
 
   const pick = () => {
     if (q === "q1") return { meta: hz_q1Meta, chart: hz_q1Chart }
@@ -3421,38 +4032,440 @@ hz_updateChart = {
     errors.push({ side: "api", error: meta?.error || "API call failed" })
   }
 
-  // Update status pill
+  // Status pill
   if (errors.length) {
     hz_statusPill.textContent = "Error"
+    hz_statusPill.classList.add("hz-pill--error")
   } else {
+    hz_statusPill.classList.remove("hz-pill--error")
     const tag = meta?.cached ? "Cached" : "Ready"
     const ms = Number.isFinite(meta?.t_ms) ? ` (${meta.t_ms} ms)` : ""
     hz_statusPill.textContent = tag + ms
   }
 
-  if (errors.length) {
-    hz_chartHost.replaceChildren(html`<div class="warn"><b>Data load failed</b><br/><div class="hz-muted">${errors[0].error}</div></div>`)
+  // Chart area
+  if (wantsChart) {
+    if (errors.length) {
+      hz_chartHost.replaceChildren(
+        html`<div class="warn"><b>Chart failed</b><br/><div class="hz-muted">${errors[0].error}</div></div>`
+      )
+    } else {
+      try {
+        hz_chartHost.replaceChildren(chart)
+      } catch (e) {
+        hz_chartHost.replaceChildren(
+          html`<div class="warn"><b>Plot error</b><br/><div class="hz-muted">${String(e)}</div></div>`
+        )
+      }
+    }
+  } else {
+    hz_chartHost.replaceChildren(html`<div class="hz-muted">Chart hidden.</div>`)
+  }
+
+  // Table area
+  const clearTable = (msg) => {
+    try { hz_tableActionsHost.replaceChildren() } catch (_) {}
+    hz_tableHost.replaceChildren(html`<div class="hz-muted">${msg}</div>`)
+  }
+
+  if (!wantsTable) {
+    clearTable("Table hidden.")
     return html``
   }
 
-  // Render selected chart
-  try {
-    hz_chartHost.replaceChildren(chart)
-  } catch (e) {
-    hz_statusPill.textContent = "Error"
-    hz_chartHost.replaceChildren(html`<div class="warn"><b>Plot failed to render</b><br>${String(e)}</div>`)
+  if (errors.length) {
+    clearTable("Table unavailable because the API request failed.")
+    return html``
   }
+
+  // Load Grid.js (once)
+  let gridOk = true
+  try { await hz_loadGridjs() } catch (e) { gridOk = false }
+  if (!gridOk) {
+    clearTable("Table library failed to load (Grid.js). Check network/CSP and reload.")
+    return html``
+  }
+
+  const showPct = !!(hz_relative || hz_rel)
+  const fmtAbs = (v) => hz_formatNumber(v, { digits: 2, compact: true })
+  const fmtAbsFull = (v) => hz_formatNumber(v, { digits: 2, compact: false })
+  const fmtPct = (v) => {
+    const x = Number(v)
+    if (!Number.isFinite(x)) return "—"
+    return `${hz_formatNumber(x, { digits: 2, compact: false })}%`
+  }
+
+  const payload = (() => {
+    if (q === "q1") {
+      const rows = Array.isArray(hz_chartRows) ? hz_chartRows : []
+      const headers = ["Hazard","Left total","Right total","Δ (abs)","Left %","Right %","Δ (pp)"]
+      const data = rows.map(r => [
+        r.hazard,
+        Number(r.total1 ?? 0),
+        Number(r.total2 ?? 0),
+        Number(r.total_diff ?? (Number(r.total2 ?? 0) - Number(r.total1 ?? 0))),
+        Number(r.perc1 ?? 0),
+        Number(r.perc2 ?? 0),
+        Number(r.pct_diff ?? (Number(r.perc2 ?? 0) - Number(r.perc1 ?? 0)))
+      ])
+
+      const columns = [
+        { name: "Hazard" },
+        { name: "Left", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Right", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Δ", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Left %", sort: true, formatter: (c) => fmtPct(c) },
+        { name: "Right %", sort: true, formatter: (c) => fmtPct(c) },
+        { name: "Δ (pp)", sort: true, formatter: (c) => fmtPct(c) }
+      ]
+      return { filename: "q1_by_hazard.csv", headers, data, columns }
+    }
+
+    if (q === "q2") {
+      const rows = Array.isArray(hz_q2Rows) ? hz_q2Rows : []
+      const sum1 = rows.reduce((a,r) => a + Number(r.total1 ?? 0), 0)
+      const sum2 = rows.reduce((a,r) => a + Number(r.total2 ?? 0), 0)
+      const headers = ["Crop","Left total","Right total","Δ (abs)","Left %","Right %","Δ (pp)"]
+      const data = rows.map(r => {
+        const t1 = Number(r.total1 ?? 0), t2 = Number(r.total2 ?? 0)
+        const p1 = sum1 ? (t1/sum1*100) : 0
+        const p2 = sum2 ? (t2/sum2*100) : 0
+        return [r.crop, t1, t2, (t2 - t1), p1, p2, (p2 - p1)]
+      })
+      const columns = [
+        { name: "Crop" },
+        { name: "Left", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Right", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Δ", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Left %", sort: true, formatter: (c) => fmtPct(c) },
+        { name: "Right %", sort: true, formatter: (c) => fmtPct(c) },
+        { name: "Δ (pp)", sort: true, formatter: (c) => fmtPct(c) }
+      ]
+      return { filename: "q2_by_crop.csv", headers, data, columns }
+    }
+
+    if (q === "q3") {
+      // Match chart selection: top crops by (Left+Right)
+      const L = Array.isArray(hz_q3DataL) ? hz_q3DataL : []
+      const R = Array.isArray(hz_q3DataR) ? hz_q3DataR : []
+      const cropTotals = new Map()
+      const bump = (crop, v) => cropTotals.set(crop, (cropTotals.get(crop) || 0) + Number(v || 0))
+      for (const d of R) bump(d.crop, d.total)
+      for (const d of L) bump(d.crop, d.total)
+
+      const maxCrops = Math.min(10, Number(hz_topN || 10))
+      const crops = Array.from(cropTotals.entries())
+        .sort((a,b) => b[1] - a[1])
+        .slice(0, maxCrops)
+        .map(([c]) => c)
+
+      // Top hazards by combined total (keeps table compact)
+      const hazTotals = new Map()
+      const bumpH = (haz, v) => hazTotals.set(haz, (hazTotals.get(haz) || 0) + Number(v || 0))
+      for (const d of R) bumpH(d.hazard, d.total)
+      for (const d of L) bumpH(d.hazard, d.total)
+
+      const maxHaz = Math.min(12, Array.from(hazTotals.keys()).length)
+      const hazards = Array.from(hazTotals.entries())
+        .sort((a,b) => b[1] - a[1])
+        .slice(0, maxHaz)
+        .map(([h]) => h)
+
+      const key = (crop, hazard) => `${crop}|||${hazard}`
+      const mapL = new Map(L.filter(d => crops.includes(d.crop) && hazards.includes(d.hazard)).map(d => [key(d.crop, d.hazard), Number(d.total || 0)]))
+      const mapR = new Map(R.filter(d => crops.includes(d.crop) && hazards.includes(d.hazard)).map(d => [key(d.crop, d.hazard), Number(d.total || 0)]))
+
+      const pairs = []
+      for (const c of crops) for (const h of hazards) pairs.push([c,h])
+
+      const headers = ["Crop","Hazard","Left total","Right total","Δ (abs)"]
+      const data = pairs.map(([crop, hazard]) => {
+        const t1 = mapL.get(key(crop,hazard)) || 0
+        const t2 = mapR.get(key(crop,hazard)) || 0
+        return [crop, hazard, t1, t2, (t2 - t1)]
+      }).sort((a,b) => (b[3] - a[3]) || (b[2] - a[2]))
+
+      const columns = [
+        { name: "Crop" },
+        { name: "Hazard" },
+        { name: "Left", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Right", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Δ", sort: true, formatter: (c) => fmtAbs(c) }
+      ]
+      return { filename: "q3_hazard_x_crop.csv", headers, data, columns }
+    }
+
+    if (q === "q4") {
+      const rows = Array.isArray(hz_q4Rows) ? hz_q4Rows : []
+      const sum1 = rows.reduce((a,r) => a + Number(r.total1 ?? 0), 0)
+      const sum2 = rows.reduce((a,r) => a + Number(r.total2 ?? 0), 0)
+
+      const headers = ["Admin","Left total","Right total","Δ (abs)","Left %","Right %","Δ (pp)"]
+      const data = rows.map(r => {
+        const t1 = Number(r.total1 ?? 0), t2 = Number(r.total2 ?? 0)
+        const p1 = sum1 ? (t1/sum1*100) : 0
+        const p2 = sum2 ? (t2/sum2*100) : 0
+        return [r.admin_name, t1, t2, (t2 - t1), p1, p2, (p2 - p1)]
+      })
+
+      const columns = [
+        { name: "Admin" },
+        { name: "Left", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Right", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Δ", sort: true, formatter: (c) => fmtAbs(c) },
+        { name: "Left %", sort: true, formatter: (c) => fmtPct(c) },
+        { name: "Right %", sort: true, formatter: (c) => fmtPct(c) },
+        { name: "Δ (pp)", sort: true, formatter: (c) => fmtPct(c) }
+      ]
+      return { filename: "q4_by_admin.csv", headers, data, columns }
+    }
+
+    return null
+  })()
+
+  if (!payload) {
+    clearTable("No table available for this view yet.")
+    return html``
+  }
+
+  // Actions: download CSV
+  const dl = document.createElement("button")
+  dl.className = "hz-btn"
+  dl.textContent = "Download CSV"
+  dl.onclick = () => hz_downloadCsv(payload.filename, [payload.headers, ...payload.data])
+
+  const rowsMeta = document.createElement("div")
+  rowsMeta.className = "hz-muted"
+  rowsMeta.style.marginRight = "10px"
+  rowsMeta.textContent = `${payload.data.length.toLocaleString()} rows`
+
+  const actionsWrap = document.createElement("div")
+  actionsWrap.style.display = "flex"
+  actionsWrap.style.alignItems = "center"
+  actionsWrap.style.gap = "10px"
+  actionsWrap.appendChild(rowsMeta)
+  actionsWrap.appendChild(dl)
+
+  hz_tableActionsHost.replaceChildren(actionsWrap)
+
+  // Mount Grid
+  const tableDiv = document.createElement("div")
+  hz_tableHost.replaceChildren(tableDiv)
+  hz_mountGrid(tableDiv, "hz_table", {
+    columns: payload.columns,
+    data: payload.data,
+    search: true,
+    sort: true,
+    pagination: { enabled: true, limit: 12 },
+    fixedHeader: true,
+    height: "540px"
+  })
 
   return html``
 }
 
 
+
+
+
+
+// ------------------------------------------------------------
+// Raw records (paged) — server-backed
+// ------------------------------------------------------------
+
+hz_recordsReq = {
+  if (hz_viewMode !== "records") return null
+
+  const side = (hz_recordsSide || "left")
+  const src = (side === "right") ? hz_src2 : hz_src1
+  const scen = (side === "right") ? hz_s2 : hz_s1
+
+  const req = {
+    dataset_url: src?.url,
+    scen: { scenario: scen?.scenario, timeframe: scen?.timeframe },
+    geo: hz_geoFilter,
+    commodities: hz_selectedCommodities ?? [],
+    hazard_vars: null,
+    method: hz_method,
+    commodity_group: hz_selectedCommodGroup,
+    page: Number(hz_recordsPage || 1)
+  }
+
+  const ps = Number(hz_recordsPageSize)
+  if (Number.isFinite(ps) && ps > 0) req.page_size = ps
+
+  const s = hz_recordsSort
+  if (typeof s === "string" && s) req.sort = s
+
+  return req
+}
+
+hz_recordsResp = (hz_recordsReq)
+  ? await hz_apiDebouncedCached("records", "/api/v1/hz/records", hz_recordsReq, { ttlMs: 30000, debounceMs: 150 })
+  : null
+
+hz_recordsRows = hz_recordsResp?.rows ?? []
+hz_recordsHasMore = !!hz_recordsResp?.has_more
+
+hz_recordsPagerSync = {
+  const pager = globalThis.__ATLAS_HZ_REC_PAGER__
+  if (pager) {
+    pager.prev.disabled = Number(hz_recordsPage || 1) <= 1
+    pager.next.disabled = !hz_recordsHasMore
+    pager.label.textContent = `Page ${Number(hz_recordsPage || 1)}`
+  }
+  return html``
+}
+
+hz_recordsResetPage = {
+  if (hz_viewMode !== "records") return html``
+
+  // When these change, jump back to page 1
+  hz_recordsSide
+  hz_recordsSort
+  hz_recordsPageSize
+
+  const pager = globalThis.__ATLAS_HZ_REC_PAGER__
+  if (pager?.set) pager.set(1, { silent: false })
+  return html``
+}
+
+hz_exportRecordsCsv = async ({ scope = "all" } = {}) => {
+  const req = hz_recordsReq
+  if (!req) return
+
+  // "all" means: let the server export up to its EXPORT_MAX_ROWS guardrail (default 200k).
+  const body = (scope === "all")
+    ? { ...req, page: 1, page_size: 200000 }
+    : req
+
+  const url = hz_apiBaseUrl + "/api/v1/hz/records_csv"
+  const res = await fetch(url, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(body)
+  })
+
+  if (!res.ok) {
+    const txt = await res.text()
+    throw new Error(txt || ("HTTP " + res.status))
+  }
+
+  const blob = await res.blob()
+  const stamp = new Date().toISOString().slice(0,19).replaceAll(":","").replace("T","_")
+  const name = `records_export_${stamp}.csv`
+
+  const a = document.createElement("a")
+  a.href = URL.createObjectURL(blob)
+  a.download = name
+  document.body.appendChild(a)
+  a.click()
+  setTimeout(() => { URL.revokeObjectURL(a.href); a.remove() }, 300)
+}
+
+hz_updateRecords = {
+  if (hz_viewMode !== "records") return html``
+
+  // Ensure Grid.js is available
+  try { await hz_loadGridjs() } catch (e) {
+    hz_recordsActionsHost.replaceChildren()
+    hz_recordsHost.replaceChildren(
+      html`<div class="warn"><b>Records table failed</b><br/><div class="hz-muted">Could not load Grid.js. ${String(e)}</div></div>`
+    )
+    return html``
+  }
+
+  const resp = hz_recordsResp
+  if (!resp?.rows || !resp?.ok) {
+    hz_recordsActionsHost.replaceChildren()
+    const msg = resp?.error || "No data"
+    hz_recordsHost.replaceChildren(
+      html`<div class="warn"><b>Could not load records</b><br/><div class="hz-muted">${String(msg)}</div></div>`
+    )
+    return html``
+  }
+
+  // Actions
+  const actions = document.createElement("div")
+  actions.style.display = "flex"
+  actions.style.gap = "8px"
+  actions.style.flexWrap = "wrap"
+  actions.style.justifyContent = "flex-end"
+  actions.style.alignItems = "center"
+
+  const badge = document.createElement("div")
+  badge.className = "hz-muted"
+  badge.style.fontWeight = "900"
+  badge.style.fontSize = "12px"
+  badge.textContent = `Rows: ${hz_recordsRows.length}${hz_recordsHasMore ? "+" : ""}`
+
+  const btnAll = document.createElement("button")
+  btnAll.className = "hz-btn hz-btn--sm"
+  btnAll.textContent = "Export (server, max 200k)"
+  btnAll.onclick = async () => {
+    try {
+      btnAll.disabled = true
+      btnAll.textContent = "Exporting…"
+      await hz_exportRecordsCsv({ scope: "all" })
+    } catch (e) {
+      alert(`Export failed: ${String(e?.message || e)}`)
+    } finally {
+      btnAll.disabled = false
+      btnAll.textContent = "Export (server, max 200k)"
+    }
+  }
+
+  actions.appendChild(badge)
+  actions.appendChild(btnAll)
+  hz_recordsActionsHost.replaceChildren(actions)
+
+  const columns = [
+    { name: "admin0" },
+    { name: "admin1" },
+    { name: "admin2" },
+    { name: "scenario" },
+    { name: "timeframe" },
+    { name: "hazard" },
+    { name: "hazard_vars" },
+    { name: "crop" },
+    { name: "value", sort: true, formatter: (c) => hz_formatNumber(c, { digits: 2, compact: true }) }
+  ]
+
+  const data = hz_recordsRows.map(r => [
+    r.admin0_name ?? null,
+    r.admin1_name ?? null,
+    r.admin2_name ?? null,
+    r.scenario ?? null,
+    r.timeframe ?? null,
+    r.hazard ?? null,
+    r.hazard_vars ?? null,
+    r.crop ?? null,
+    (r.value === null || r.value === undefined) ? null : Number(r.value)
+  ])
+
+  const host = document.createElement("div")
+  hz_recordsHost.replaceChildren(host)
+
+  hz_mountGrid(host, "records", {
+    columns,
+    data,
+    search: true,
+    sort: true,
+    fixedHeader: true,
+    height: "560px"
+  })
+
+  return html``
+}
 // Bootstrap cell: forces mounts + updates to execute without blocking hz_main.
 hz_bootstrap = {
   hz_mountControls
   hz_mountDash
   hz_registerUi
+  hz_recordsPagerSync
+  hz_recordsResetPage
   await hz_updateChart
+  await hz_updateRecords
   return html``
 }
 
